--- a/.gitignore
+++ b/.gitignore
@@ -58,5 +58,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+#dbaccess
+
+**/Connector.java
 
 # End of https://www.gitignore.io/api/macos,windows,netbeans
