--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
+
     <name>FogCarport</name>
 
     <properties>
@@ -65,6 +66,7 @@
     </dependencies>
 
     <build>
+        <finalName>FogLosPollosHermanos</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
